# contextual-research-agent

./: .gitignore  .pre-commit-config.yaml  README.md  check_citations.py  dense_only.json  main.py  mlflow.db  pyproject.toml
.dvc/: config
api/: .env.example  Dockerfile  app.py  auth.py  config.py  lifespan.py  main.py  pyproject.toml
api/routes/: __init__.py  health.py  query.py  stats.py  trace.py
api/schemas/: __init__.py  health.py  query.py
common/: logging.py  settings.py
configs/agents/: baseline.yaml
configs/datasets/: baseline-v1.yaml  mvp-v1.yaml  peft-v1.yaml
configs/datasets/prompts/: golden_set_gen.txt
contextual_research_agent/: ERROR_ANALYSIS.md  EXPERIMENT_RESULTS.md
contextual_research_agent/agent/: ARCHITECTURE.md  RESULTS.md  __init__.py  agent.py  config.py  graph.py  llm.py  node_executor.py  prompts.py  retriever.py  service.py  state.py
contextual_research_agent/agent/nodes/: critic.py  generator.py  planner.py  retriever.py  router.py  synthesizer.py
contextual_research_agent/agent/tracing/: __init__.py  mlflow_logger.py  trace.py
contextual_research_agent/cli/: README.md  __init__.py  agent.py  arxiv.py  compare.py  datasets.py  extraction.py  generation.py  ingestion.py  retrieval.py  robustness.py
contextual_research_agent/common/: logging.py  settings.py
contextual_research_agent/data/arxiv/: client.py  constants.py  converter.py  download_service.py  downloader.py  parser.py  schemas.py  source_extractor.py
contextual_research_agent/data/extraction/: pdf_extractor.py
contextual_research_agent/data/kaggle/: download_dataset.py
contextual_research_agent/data/storage/: s3_client.py
contextual_research_agent/db/: __init__.py  connection.py  errors.py
contextual_research_agent/db/repositories/: __init__.py  base.py  datasets.py  extracted_texts.py  knowledge_graph.py  paper_files.py  papers_metadata.py  sync_state.py
contextual_research_agent/generation/: README.md  __init__.py  config.py  evaluation.py  judge_eval.py  no_rag_baseline.py  openrouter_provider.py  pipeline.py  prompts.py  robustness_eval.py
contextual_research_agent/ingestion/: README.md  analytics.py  pipeline.py  result.py  state.py  tracking.py
contextual_research_agent/ingestion/domain/: entities.py  types.py
contextual_research_agent/ingestion/embeddings/: __init__.py  base.py  hf_embedder.py  metrics.py  sparse.py
contextual_research_agent/ingestion/extraction/: citation_extractor.py  entity_extractor.py  section_classifier.py
contextual_research_agent/ingestion/parsers/: __init__.py  base.py  docling.py  metrics.py
contextual_research_agent/retrieval/: README.md  __init__.py  config.py  factory.py  metrics.py  pipeline.py  tracking.py  types.py
contextual_research_agent/services/: dataset_service.py  text_extraction_service.py
contextual_research_agent/tracking/: mlflow_tracking.py
dags/: arxiv_weekly_metadata.py
data/: raw.dvc
data_pipeline/arxiv/: __init__.py  constants.py  ingest_arxiv_metadata.py  parquet_writer.py  parser.py
db/: __init__.py  errors.py
db/arxiv/: metadata.py  sync_state.py
eval/: compute.py  peft_dataset.json  peft_gold_v1.json  peft_gold_v1_mapped.json  peft_gold_v2_mapped.json  peft_gold_v3_mapped.json  stratify.py
infra/: docker-compose.yml
infra/docker/: docker-compose.yml
kaggle/: download_dataset.py
notebooks/: arxiv_metadata_eda.ipynb
training/: export_to_gguf.py  general_sft_data.py  generate_data.py  make_modelfile.py  prepare_training_data.py  train_lora.py
training/configs/: critical_review.yaml  factual_qa.yaml  factual_qa_v2.yaml  summarization.yaml
ui/: .env.example  Dockerfile  app.py  client.py  config.py  main.py  pyproject.toml
ui/components/: __init__.py  debug_panel.py  trace_live.py
(+19 files in other folders)
