[project]
name = "contextual-research-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "apache-airflow==2.9.3",
    "apache-airflow-providers-postgres==5.11.3",
    "asyncio>=4.0.0",
    "docling>=2.70.0",
    "dvc[s3]>=3.66.1",
    "fire>=0.7.1",
    "hydra-core>=1.3.2",
    "langgraph>=1.0.7",
    "marker-pdf>=1.10.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=22.0.0",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.16.2",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.0",
    "transformers>=4.57.6",
]

[project.scripts]
cra = "contextual_research_agent.cli:main"

[dependency-groups]
dev = ["pre-commit>=4.5.1", "ruff>=0.14.10"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu130", marker = "sys_platform == 'win32'" }]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.ruff]
line-length = 100
format = { docstring-code-format = true }

[tool.ruff.lint]
select = [
    "I",
    "E",
    "W",
    "F",
    "UP",
    "B",
    "SIM",
    "A",
    "RET",
    "PTH",
    "FLY",
    "C90",
    "NPY",
    "N",
    "RUF",
    "PL",
    "FURB",
]
ignore = ["N812"]

pycodestyle = { max-doc-length = 105 }
