[project]
name = "research-assistant-api"
version = "0.1.0"
description = "FastAPI backend for the multi-agent research assistant"
requires-python = ">=3.12"

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=2.1.0",
    "websockets>=13.0",
    "python-multipart>=0.0.12",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B", "ASYNC", "PL"]
