[project]
name = "research-assistant-ui"
version = "0.1.0"
description = "Gradio UI for the multi-agent research assistant"
requires-python = ">=3.12"

dependencies = [
    "gradio>=5.0.0,<6.0.0",
    "httpx>=0.27.0",
    "websockets>=13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
